<resources>
    <string name="app_name">Koobook</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login"> <u>Login</u> </string>
    <string name="this_field_is_required">This field is required</string>
    <string name="passwords_does_not_match">Passwords does not match</string>
    <string name="login_failed_msg">Username or password or both were incorrectly entered or the account does not exist. Please check and try again.</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="scan_msg">Please scan the barcode on the back of the book</string>
    <string name="loading_screen_msg">Fetching information about book</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="error_msg">Something went wrong while retrieving the books.</string>
    <string name="no_books_msg">No books to display</string>
    <string name="no_search_results_msg">No results found</string>
    <string name="search_error_msg">Please enter something in any of the text fields.</string>
    <string name="statistics_msg">Click on one of the options to receive an insight of your book preferences</string>
    <string name="author_barchart_interaction_msg">Tap on one of the bars to view the author</string>
    <string name="genre_barchart_interaction_msg">Tap on one of the bars to view the genre</string>
    <string name="about_section">This purpose of Koobook is to provide you with relevent information about a given book which will help you make efficient decision on wehther you like a book or not.When you find a book that you want to get information for, you have the option to scan the books ISBN or manually enter the ISBN number.</string>
</resources>
