<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_background_v3">


        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:src="@drawable/koobook_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Koobook"
            android:gravity="center"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_weight="0.4"
        >

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/email_icon"
            />

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/password_icon"
            />

        <TextView
            android:id="@+id/textview_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:gravity="bottom|center"
            android:onClick="forgotPasswordLinkClicked"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_button"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:onClick="loginButtonClicked"
            android:text="Login"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:gravity="bottom|center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="Don't have an account?"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:onClick="signUpButtonClicked"
            android:text="Sign up"

            android:textColor="@color/lightBlue" />

        <TextView
            android:id="@+id/textview_login_failed_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:gravity="bottom|center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/login_failed_msg"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"
            />

    </LinearLayout>



</LinearLayout>