<?xml version="1.0" encoding="utf-8"?>
<!-- Got material design background from https://365webresources.com/android-google-material-design-freebies/4/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/start_background_v3"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Reset password"
            android:gravity="center"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Enter new password"
            android:gravity="center"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:textSize="30dp"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textview_password_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm password"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edittext_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textview_passwords_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:fontFamily="@font/arial_regular"
            android:textColor="@color/pinkRed"
            android:textSize="14dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_button"
            android:fontFamily="@font/helvetic_neuva_condensed"
            android:text="Reset"
            android:onClick="resetButtonClicked"
            android:textColor="@color/white" />


    </LinearLayout>



</LinearLayout>